css/main.css
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */


/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */


/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html, button, input, select, textarea {
  color: #222;
}
html {
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}
::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio, canvas, img, video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Browse Happy prompt
   ========================================================================== */

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
  background: url("/img/testBckground.jpg")no-repeat center center;
  background-size: cover;
}
.Container {
  margin: 0 5em 0 5em;
}

/* Navigation Header */

.headerNav {
  background-color: #FFFFFF;
  height: 5em;
}
.leftNav {
  display: inline-flex;
  margin: 15px 0 0 0;
}

/* left top nav bar color and hover color */

.leftNav li a {
  color: #BCBFC3;
}
.leftNav li a:hover {
  color: #373737;
}
.rightNav {
  display: inline-flex;
  float: right;
  margin: 15px 0 0 0;
  padding-right: 20px;
}
.headerNav ul {
  margin-bottom: 0;
}
#navLinesLeft {
  padding: 10px 20px;
}
#navLinesRight {
  color: white;
  margin-top: 10px;
  margin-right: 15px;
}

/* nav-bar right search icon*/

.rightNav li:first-child {
  background-color: #BCBFC3;
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 50%;
}

/* nav-bar plus icon */

.rightNav li:nth-child(even) {
  background-color: #FF554C;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 1px;
  border-radius: 50%;
}

/* nav-bar right third list item image */

.rightNav li:last-child {
  margin-top: 6px;
}

/* Hero Image Carousel */

.heroImage {
  background-size: 100% 100%;
  margin: 0;
  height: 740px;
}
.heroText {
  position: relative;
  bottom: 15em;
  left: 2em;
  color: #FFFFFF;
}
.heroText h1 {
  font-family: initial;
  font-size: 60px;
  font-weight: 900;
}
.carousel {
  height: 734px!important;
}

/* pin and heart icons on hero image */

.pinHeartIcons {
  position: relative;
  bottom: 58em;
  left: 52em;
}
.pinHeartIcons i:first-child {
  color: #FFD56C;
  margin-right: 1em;
}
.pinHeartIcons i:nth-child(even) {
  color: #FFFFFF;
}

/* Aside */

aside {
  width: 35%;
  height: 33em;
  float: left;
  text-align: center;
  background-color: #1C1F20;
  color: #FFFFFF;
}
.asideContent {
  margin-top: 2em;
}
.profileImg {
  height: 5em;
  width: 5em;
  border-radius: 50%;
}
.buttonsFollowMessage button {
  border: 1px solid #5C5E5F;
  background-color: #1C1F20;
  color: #5C5E5F;
  padding: 5px;
  border-radius: 2em;
}
.buttonsFollowMessage button:hover {
  background-color: #00A46D;
  color: #FFFFFF;
}
.buttonsFollowMessage button:nth-child(even) {
  width: 101px;
  margin-left: 2.5em;
}

/* Aside: number of stories and followers div */

.storiesAndFollowers ul {
  list-style: none;
  margin: 0 2em;
  padding-left: 42px;
}
.storiesAndFollowers ul li:first-child {
  float: left;
  margin-right: 3em;
}
hr {
  margin-right: 3em;
  margin-left: 3em;
  color: #303334;
}

/* Aside: posts timeline list */

.timeline {
  list-style: none;
}
.timeline p:first-child {
  float: left;
  width: 40%;
}
.timeline p:nth-child(even) {
  float: right;
  margin-top: 3em;
  width: 49.5%;
  padding-right: 25px;
}
.fa-circle {
  position: relative;
  right: 5em;
}
.secondCircle {
  position: relative;
  right: 0.2em;
  top: 3em;
}

/* timeline verticla line connecting dots */

.timeline::before {
  content: '';
  position: absolute;
  width: 2px;
  height: 8.7em;
  background: #323536;
  top: 81.5em;
  left: 16.5em;
}

/* MainContent: Posts Dashboard */

.mainContent {
  width: 65%;
  height: 33em;
  float: right;
  background-color: #FFFFFF;
}
.rightNavMainContent {
  float: right;
  margin: 15px 0 0 0;
  padding-right: 20px;
}
.rightNavMainContent li {
  margin-top: 10px;
  color: #BCBFC3;
}
.invitedNumber {
  margin-left: 1em;
  background-color: #FF554C;
  color: #FFFFFF;
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 50%;
}
.dashboardPosts {
  background-color: #EBEDEB;
  height: 86%;
}
.postsContainer {
  display: inline-flex;
  width: 550px;
}
figcaption {
  position: relative;
  color: #FFFFFF;
  bottom: 2em;
  left: 1em;
  font-size: 25px;
  font-weight: 100;
}

/* hover state on the dashboard images  */

#postsImage {
  background: url("http://lorempixel.com/400/200");
  background-size: cover;
  width: 150px;
  height: 150px;
  overflow: hidden;
}
#imageOverlay {
  background: #4D8FA5;
  padding: 45px 0 104px 0;
  opacity: 0;
  text-align: center;
}
#postsImage:hover #imageOverlay {
  opacity: 0.7;
}
.overlayIcons {
  position: relative;
  top: 1em;
}
.overlayIcons i:first-child {
  background-color: #FFFFFF;
  color: #4D8FA5;
  padding: 10px;
  border-radius: 50%;
}
.overlayIcons i:nth-child(even) {
  background-color: #FFFFFF;
  color: #4D8FA5;
  padding: 10px 11px 10px 11px;
  border-radius: 50%;
  margin-left: 1em;
}

/* dashboard section caret */

.fa-sort-asc {
  position: relative;
  left: 1.55em;
  bottom: 4.35em;
  color: #EBEDEB;
}

/* dashboard image icons */

.dashboardImgIcons {
  position: relative;
  top: 2em;
  left: 7em;
}
.dashboardImgIcons i:first-child {
  color: #FFD56C;
  margin-right: 1em;
}
.dashboardImgIcons i:nth-child(even) {
  color: #FFFFFF;
}

/* inbox popover template */

.popoverTemplate {
  width: 350px;
  height: 250px;
}
.userMessages {
  list-style: none;
  padding: 0;
  width: 300px;
  height: 190px;
}
.userMessages li {
  height: 95px;
}
.userMessages li img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  /*float: left;*/
}
.userMessages h5 {
  position: relative;
  bottom: 3em;
  margin-left: 3em;
}
.userMessages li time {
  float: right;
  position: relative;
  bottom: 4.9em;
  right: 4em;
  color: #ABACAE;
}
.userMessages p {
  position: relative;
  bottom: 3em;
  left: 3em;
  color: #646464;
}
.userMessages hr {
  position: relative;
  right: 2em;
  bottom: 1em;
}
.userMessages button {
  background-color: #EFF0F0;
  width: 91%;
  position: relative;
  right: 1em;
  bottom: 2em;
  border: none;
  padding-bottom: 5px;
  color: #B3B6BA;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */


/*
 * Image replacement
 */

.ir {
  background-color: transparent;
  border: 0;
  overflow: hidden;
  /* IE 6/7 fallback */
  *text-indent: -9999px;
}
.ir:before {
  content: "";
  display: block;
  width: 0;
  height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
  display: none !important;
  visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before, .clearfix:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}
.clearfix:after {
  clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
  *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}
@media print, (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
  * {
    background: transparent !important;
    color: #000 !important;
    /* Black prints faster: h5bp.com/s */
    box-shadow: none !important;
    text-shadow: none !important;
  }
  a, a:visited {
    text-decoration: underline;
  }
  a[href]:after {
    content: " (" attr(href) ")";
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  /*
     * Don't show links for images, or javascript/internal links
     */
  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after {
    content: "";
  }
  pre, blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
    /* h5bp.com/t */
  }
  tr, img {
    page-break-inside: avoid;
  }
  img {
    max-width: 100% !important;
  }
  @page {
    margin: 0.5cm;
  }
  p, h2, h3 {
    orphans: 3;
    widows: 3;
  }
  h2, h3 {
    page-break-after: avoid;
  }
}

